increase max upload size to 2bg

--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ textColor = "#E2E8F0"
 font = "monospace"
 
 [server]
+maxUploadSize = 2048
 headless = true
 enableCORS = false
 enableXsrfProtection = false
